# bitnet-core

./: .appveyor.yml  .cirrus.yml  .gitignore  .travis.yml  Android-Build-Docker.md  CONTRIBUTING.md  COPYING  Dockerfile  EMULATOR-create  INSTALL.md  Makefile  Makefile.am  Makefile.in  README.md  SECURITY.md  aclocal.m4  autogen.sh  background.tiff  bitnet.conf  buffer.txt  build-alpine.sh  build-configure-static.sh  build-configure-windows.sh  build-configure.sh  build-debian-deps.sh  build-deps-fedora.sh  build-deps-ubuntu1804.sh  build-fedora-deps.sh  build-linux-static.sh  build-radiocoin-linux.sh  build.txt  checkinstall_1.6.2-2_amd64.deb  config.status  configure  configure.ac  configure.lineno  configure~  create-ANDROID-emulator-environment.sh  create-keystore-and-sign.sh  generate.sh  (+10 more)
src/: Makefile  Makefile.am  Makefile.bench.include  Makefile.crc32c.include  Makefile.in  Makefile.leveldb.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  addrman_impl.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  attributes.h  auxpow.h  banman.cpp  banman.h  base58.cpp  base58.h  bech32.cpp  bech32.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-util-res.rc  bitcoin-util.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  bitnet-chainstate.cpp  (+159 more)
src/.deps/: bitnet_cli-bitcoin-cli.Po  bitnet_tx-bitcoin-tx.Po  bitnetd-bitcoind.Po  dogecoind-bitcoind.Po  libbitnet_cli_a-bitnet.Po  libbitnet_common_a-alert.Po  libbitnet_common_a-amount.Po  libbitnet_common_a-arith_uint256.Po  libbitnet_common_a-auxpow.Po  libbitnet_common_a-base58.Po  libbitnet_common_a-bitnet.Po  libbitnet_common_a-chainparams.Po  libbitnet_common_a-coins.Po  libbitnet_common_a-compressor.Po  libbitnet_common_a-core_read.Po  libbitnet_common_a-core_write.Po  libbitnet_common_a-key.Po  libbitnet_common_a-keystore.Po  libbitnet_common_a-netaddress.Po  libbitnet_common_a-netbase.Po  libbitnet_common_a-protocol.Po  libbitnet_common_a-scheduler.Po  libbitnet_common_a-warnings.Po  libbitnet_consensus_a-arith_uint256.Po  libbitnet_consensus_a-hash.Po  libbitnet_consensus_a-pubkey.Po  libbitnet_consensus_a-uint256.Po  libbitnet_consensus_a-utilstrencodings.Po  libbitnet_server_a-addrdb.Po  libbitnet_server_a-addrman.Po  libbitnet_server_a-alert.Po  libbitnet_server_a-bitnet.Po  libbitnet_server_a-blockencodings.Po  libbitnet_server_a-bloom.Po  libbitnet_server_a-chain.Po  libbitnet_server_a-checkpoints.Po  libbitnet_server_a-dbwrapper.Po  libbitnet_server_a-httprpc.Po  libbitnet_server_a-httpserver.Po  libbitnet_server_a-init.Po  (+133 more)
src/bench/: .gitignore  addrman.cpp  base58.cpp  bech32.cpp  bench.cpp  bench.h  bench_bitcoin.cpp  bench_bitnet.cpp  block_assemble.cpp  ccoins_caching.cpp  chacha20.cpp  chacha_poly_aead.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  data.cpp  data.h  descriptors.cpp  duplicate_inputs.cpp  examples.cpp  gcs_filter.cpp  hashpadding.cpp  load_external.cpp  lockedpool.cpp  logging.cpp  mempool_eviction.cpp  mempool_stress.cpp  merkle_root.cpp  nanobench.cpp  peer_eviction.cpp  poly1305.cpp  prevector.cpp  rollingbloom.cpp  rpc_blockchain.cpp  rpc_mempool.cpp  strencodings.cpp  util_time.cpp  verify_script.cpp  wallet_balance.cpp  (+2 more)
src/common/: bloom.cpp  bloom.h  interfaces.cpp  run_command.cpp  run_command.h  url.cpp  url.h
src/compat/: assumptions.h  byteswap.h  compat.h  cpuid.h  endian.h  stdin.cpp  stdin.h
src/config/: bitcoin-config.h  bitcoin-config.h.in  bitcoin-config.h.in~  stamp-h1
src/consensus/: amount.h  consensus.h  merkle.cpp  merkle.h  params.h  tx_check.cpp  tx_check.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: aes.cpp  aes.h  aurum.c  aurum.h  chacha20.cpp  chacha20.h  chacha_poly_aead.cpp  chacha_poly_aead.h  common.h  hkdf_sha256_32.cpp  hkdf_sha256_32.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  muhash.cpp  muhash.h  poly1305.cpp  poly1305.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha256_arm_shani.cpp  sha256_avx2.cpp  sha256_sse4.cpp  sha256_sse41.cpp  sha256_x86_shani.cpp  sha3.cpp  sha3.h  sha512.cpp  sha512.h  siphash.cpp  siphash.h
src/index/: base.cpp  base.h  blockfilterindex.cpp  blockfilterindex.h  coinstatsindex.cpp  coinstatsindex.h  disktxpos.h  txindex.cpp  txindex.h
src/init/: bitcoin-node.cpp  bitnet-gui.cpp  bitnet-node.cpp  bitnet-qt.cpp  bitnet-wallet.cpp  bitnetd.cpp  common.cpp  common.h
src/interfaces/: README.md  chain.h  echo.h  handler.h  init.h  ipc.h  node.h  wallet.h
src/ipc/: context.h  exception.h  interfaces.cpp  process.cpp  process.h  protocol.h
src/kernel/: bitcoinkernel.cpp  chain.cpp  chain.h  chainstatemanager_opts.h  checks.cpp  checks.h  coinstats.cpp  coinstats.h  context.cpp  context.h  cs_main.cpp  cs_main.h  mempool_entry.h  mempool_limits.h  mempool_options.h  mempool_persist.cpp  mempool_persist.h  validation_cache_sizes.h
src/leveldb/: build_detect_platform
src/libmw/: README.md
src/logging/: timer.h
src/minisketch/: README.md  autogen.sh
src/node/: blockstorage.cpp  blockstorage.h  caches.cpp  caches.h  chainstate.cpp  chainstate.h  chainstatemanager_args.cpp  chainstatemanager_args.h  coin.cpp  coin.h  coins_view_args.cpp  coins_view_args.h  connection_types.cpp  connection_types.h  context.cpp  context.h  database_args.cpp  database_args.h  eviction.cpp  eviction.h  interface_ui.cpp  interface_ui.h  interfaces.cpp  mempool_args.cpp  mempool_args.h  mempool_persist_args.cpp  mempool_persist_args.h  miner.cpp  miner.h  minisketchwrapper.cpp  minisketchwrapper.h  psbt.cpp  psbt.h  transaction.cpp  transaction.h  txreconciliation.cpp  txreconciliation.h  utxo_snapshot.cpp  utxo_snapshot.h  validation_cache_args.cpp  (+1 more)
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  fees_args.cpp  fees_args.h  packages.cpp  packages.h  policy.cpp  policy.h  rbf.cpp  rbf.h  settings.cpp  settings.h
(+2291 files in other folders)
